--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Required metadata
-sonar.projectKey=org.sonarqube:scmgalaxy1
-sonar.projectName=NokiaX
-sonar.projectVersion=1.0
+sonar.projectKey=org.sonarqube:infosys
+sonar.projectName=petrorabigh
+sonar.projectVersion=1.0.0
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
@@ -11,8 +11,6 @@ sonar.sources=src
 sonar.language=java
 
 #sonar.profile=Weekend
-
-sonar.java.binaries=compiled
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
